force-app/main/default/objects/Placement__c/fields/ETJ_Date_Eligible_for_Job_Matching__c.field-meta.xml
<CustomField>
    <fullName>ETJ_Date_Eligible_for_Job_Matching__c</fullName>
    <formula>if (not(isblank (ETJ_Commitment_End_Date__c)), ETJ_Commitment_End_Date__c,

if (ISPICKVAL( Job_Type__c, &quot;External Transitional&quot;), Start_Date__c + 90,

NULL))</formula>
    <label>Date Eligible for Job Matching</label>
    <type>Date</type>
</CustomField>