force-app/main/default/objects/Placement__c/fields/ETJ_Retention_Category__c.field-meta.xml
<CustomField>
    <fullName>ETJ_Retention_Category__c</fullName>
    <formula>if (isnull (Placement_Number__c), NULL, 

if (not (ispickval (Job_Type__c, &quot;External Transitional&quot;)), NULL,

if (One_Year_Retention_Category_FY14_FY17__c &lt;&gt; &quot;ETJ Retention Tracking Only&quot;, &quot;Included in One-Year Retention&quot;,

if (ispickval (Retention_Exception__c, &quot;Retention Override&quot;), text (Retention_Exception__c), 

if (isblank (End_Date__c), &quot;Tracking&quot;,

if (ispickval (End_Type__c, &quot;Terminated&quot;), &quot;Lost Employment&quot;,

if (End_Date__c &lt; ETJ_Commitment_End_Date__c, &quot;Lost Employment&quot;,

&quot;#Retained&quot;)))))))</formula>
    <label>ETJ Retention Category</label>
    <type>Text</type>
</CustomField>