force-app/main/default/objects/Placement__c/fields/ETJ_Retention_Exception__c.field-meta.xml
<CustomField>
    <fullName>ETJ_Retention_Exception__c</fullName>
    <formula>if (not (ispickval (Job_Type__c, &quot;External Transitional&quot;)), NULL,

if (ispickval (Retention_Exception__c, &quot;Retention Override&quot;), &quot;ETJ Retention Override&quot;,

if (not (isblank (text (Retention_Exception__c))), &quot;One-Year Retention: &quot; &amp; text (Retention_Exception__c),

&quot;One-Year Retention: &quot; &amp;  One_Year_Retention_Category_FY14_FY17__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ETJ Retention Exception</label>
    <type>Text</type>
</CustomField>