force-app/main/default/objects/Placement__c/fields/ETJ_This_Mo__c.field-meta.xml
<CustomField>
    <fullName>ETJ_This_Mo__c</fullName>
    <formula>if (isnull (Placement_Number__c) || 
ispickval (Retention_Exception__c, &quot;Retention Tracked Under Previous Placement&quot;) || 
One_Year_Retention_End_Date__c &lt; (today() - day(today())+1) || 
Case_Record__r.Inactive_Date__c &lt; (today() - day(today())+1) || 
Start_Date__c + 366 &lt; today() - day(today()) || 
ispickval (Job_Type__c, &quot;Permanent&quot;) || 
ispickval (Job_Type__c, &quot;Temporary-Permanent&quot;) || 
(ispickval (Job_Type__c, &quot;External Transitional&quot;) &amp;&amp; ispickval (End_Type__c, &quot;Move within Company&quot;)), 0, 

if (ispickval (Job_Type__c, &quot;External Transitional&quot;), 

if (month(Start_Date__c + 14) = month(today()) &amp;&amp; year(Start_Date__c + 14) = year(today()), 1, 0) + 
if (month(Start_Date__c + 44) = month(today()) &amp;&amp; year(Start_Date__c + 44) = year(today()), 1, 0) + 
if (month(Start_Date__c + 74) = month(today()) &amp;&amp; year(Start_Date__c + 74) = year(today()), 1, 0) + 
if (month(Start_Date__c + 104) = month(today()) &amp;&amp; year(Start_Date__c + 104) = year(today()), 1, 0) + 
if (month(Start_Date__c + 134) = month(today()) &amp;&amp; year(Start_Date__c + 134) = year(today()), 1, 0) + 
if (month(Start_Date__c + 164) = month(today()) &amp;&amp; year(Start_Date__c + 164) = year(today()), 1, 0) + 
if (month(Start_Date__c + 194) = month(today()) &amp;&amp; year(Start_Date__c + 194) = year(today()), 1, 0) + 
if (month(Start_Date__c + 224) = month(today()) &amp;&amp; year(Start_Date__c + 224) = year(today()), 1, 0) + 
if (month(Start_Date__c + 254) = month(today()) &amp;&amp; year(Start_Date__c + 254) = year(today()), 1, 0) + 
if (month(Start_Date__c + 284) = month(today()) &amp;&amp; year(Start_Date__c + 284) = year(today()), 1, 0) + 
if (month(Start_Date__c + 314) = month(today()) &amp;&amp; year(Start_Date__c + 314) = year(today()), 1, 0) + 
if (month(Start_Date__c + 344) = month(today()) &amp;&amp; year(Start_Date__c + 344) = year(today()), 1, 0), 

0))</formula>
    <label># ETJ, This Mo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>