force-app/main/default/objects/Placement__c/fields/First_Interview_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Interview_Date__c</fullName>
    <label>First Interview Date</label>
    <type>Date</type>
</CustomField>