force-app/main/default/objects/Placement__c/fields/First_Placement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Placement_Start_Date__c</fullName>
    <formula>Organization_TCP__r.First_Placement_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Placement Start Date</label>
    <type>Date</type>
</CustomField>