force-app/main/default/objects/Placement__c/fields/First_Placement_Workflow__c.field-meta.xml
<CustomField>
    <fullName>First_Placement_Workflow__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Workflow controlled field based off of &apos;Relationship to First Placement&apos;. For use in &apos;Starting Wage of First Placement&apos; rollup field on Case Record, since formula fields cannot be used in rollups.</description>
    <label>First Placement (Workflow)</label>
    <type>Checkbox</type>
</CustomField>