force-app/main/default/objects/Placement__c/fields/FY23_Placed__c.field-meta.xml
<CustomField>
    <fullName>FY23_Placed__c</fullName>
    <formula>IF(
  AND(
    Start_Date__c &gt;= DATE(2022, 7, 1),
    Start_Date__c &lt;= DATE(2023, 6, 30),
   OR(
    Retention_Year__c = &quot;FY24&quot;,
    Retention_Year__c = &quot;FY23&quot;
    ) 
  ),
  1,
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FY23, Placed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>