force-app/main/default/objects/Placement__c/fields/Hours_Worked__c.field-meta.xml
<CustomField>
    <fullName>Hours_Worked__c</fullName>
    <inlineHelpText>Total hours worked to date for this placement.</inlineHelpText>
    <label>Hours Worked</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>