force-app/main/default/objects/Placement__c/fields/HR_Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>HR_Contact_Address__c</fullName>
    <label>HR Contact Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>