force-app/main/default/objects/Placement__c/fields/HR_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>HR_Contact_Email__c</fullName>
    <label>HR Contact Email</label>
    <type>Email</type>
</CustomField>