force-app/main/default/objects/Placement__c/fields/HR_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>HR_Contact_Name__c</fullName>
    <label>HR Contact Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>