force-app/main/default/objects/Placement__c/fields/IDS_Perm_Visit_This_Month__c.field-meta.xml
<CustomField>
    <fullName>IDS_Perm_Visit_This_Month__c</fullName>
    <formula>if (isnull (Placement_Number__c) || 
ispickval (Retention_Exception__c, &quot;Retention Tracked Under Previous Placement&quot;) || 
One_Year_Retention_End_Date__c &lt; (today() - day(today())+1) || 
Case_Record__r.Inactive_Date__c &lt; (today() - day(today())+1) || 
Start_Date__c + 366 &lt; (today() - day(today())+1), NULL, 

if (ispickval (Job_Type__c, &quot;Permanent&quot;) || ispickval (Job_Type__c, &quot;Temporary-Permanent&quot;) || (ispickval (Job_Type__c, &quot;External Transitional&quot;) &amp;&amp; ispickval (End_Type__c, &quot;Move within Company&quot;)), 

if (month(Start_Date__c + 14) = month(today()) &amp;&amp; year(Start_Date__c + 14) = year(today()), &quot;Visit 01&quot;, 
if (month(Start_Date__c + 28) = month(today()) &amp;&amp; year(Start_Date__c + 28) = year(today()), &quot;Visit 02&quot;, 
if (month(Start_Date__c + 49) = month(today()) &amp;&amp; year(Start_Date__c + 49) = year(today()), &quot;Visit 03&quot;, 
if (month(Start_Date__c + 77) = month(today()) &amp;&amp; year(Start_Date__c + 77) = year(today()), &quot;Visit 04&quot;, 
if (month(Start_Date__c + 108) = month(today()) &amp;&amp; year(Start_Date__c + 108) = year(today()), &quot;Visit 05&quot;, 
if (month(Start_Date__c + 140) = month(today()) &amp;&amp; year(Start_Date__c + 140) = year(today()), &quot;Visit 06&quot;, 
if (month(Start_Date__c + 175) = month(today()) &amp;&amp; year(Start_Date__c + 175) = year(today()), &quot;Visit 07&quot;, 
if (month(Start_Date__c + 217) = month(today()) &amp;&amp; year(Start_Date__c + 217) = year(today()), &quot;Visit 08&quot;, 
if (month(Start_Date__c + 266) = month(today()) &amp;&amp; year(Start_Date__c + 266) = year(today()), &quot;Visit 09&quot;, 
if (month(Start_Date__c + 315) = month(today()) &amp;&amp; year(Start_Date__c + 315) = year(today()), &quot;Visit 10&quot;, 
&quot;No Visit This Month&quot;)))))))))), 

if (ispickval (Job_Type__c, &quot;External Transitional&quot;), &quot;ETJ Visit&quot;, 

NULL)))</formula>
    <label>IDS Perm Visit This Month</label>
    <type>Text</type>
</CustomField>