force-app/main/default/objects/Placement__c/fields/IDS_Visit_Dates__c.field-meta.xml
<CustomField>
    <fullName>IDS_Visit_Dates__c</fullName>
    <formula>if (isnull (Placement_Number__c), NULL,

if (ispickval (Retention_Exception__c, &quot;Retention Tracked Under Previous Placement&quot;), NULL,

if (ispickval (Job_Type__c, &quot;Long-Term&quot;) || ispickval (Job_Type__c, &quot;Temporary-Permanent&quot;) || (ispickval (Job_Type__c, &quot;Short-Term&quot;) &amp;&amp; ispickval (End_Type__c, &quot;Move within Company&quot;)), 

if (Case_Record__r.Inactive_Date__c &lt;Start_Date__c + 14, NULL, left(text(Start_Date__c + 14), 7)) &amp;  

if (Case_Record__r.Inactive_Date__c &lt;Start_Date__c + 28, NULL, &quot; | &quot; &amp; left(text(Start_Date__c + 28), 7)) &amp; 

if (Case_Record__r.Inactive_Date__c &lt;Start_Date__c + 49, NULL, &quot; | &quot; &amp; left(text(Start_Date__c + 49), 7)) &amp; 

if (Case_Record__r.Inactive_Date__c &lt;Start_Date__c + 77, NULL, &quot; | &quot; &amp; left(text(Start_Date__c + 77), 7)) &amp; 

if (Case_Record__r.Inactive_Date__c &lt;Start_Date__c + 108, NULL, &quot; | &quot; &amp; left(text(Start_Date__c + 108), 7)) &amp; 

if (Case_Record__r.Inactive_Date__c &lt;Start_Date__c + 140, NULL, &quot; | &quot; &amp; left(text(Start_Date__c + 140), 7)) &amp; 

if (Case_Record__r.Inactive_Date__c &lt;Start_Date__c + 175, NULL, &quot; | &quot; &amp; left(text(Start_Date__c + 175), 7)) &amp; 

if (Case_Record__r.Inactive_Date__c &lt;Start_Date__c + 217, NULL, &quot; | &quot; &amp; left(text(Start_Date__c + 217), 7)) &amp; 

if (Case_Record__r.Inactive_Date__c &lt;Start_Date__c + 266, NULL, &quot; | &quot; &amp; left(text(Start_Date__c + 266), 7)) &amp; 

if (Case_Record__r.Inactive_Date__c &lt;Start_Date__c + 315, NULL, &quot; | &quot; &amp; left(text(Start_Date__c + 315), 7)),

if (ispickval (Job_Type__c, &quot;External Transitional&quot;),

if (Case_Record__r.Inactive_Date__c &lt;Start_Date__c + 14, NULL, left(text(Start_Date__c + 14), 7)) &amp; 

if (Case_Record__r.Inactive_Date__c &lt;Start_Date__c + 44, NULL, &quot; | &quot; &amp; left(text(Start_Date__c + 44), 7)) &amp; 

if (Case_Record__r.Inactive_Date__c &lt;Start_Date__c + 74, NULL, &quot; | &quot; &amp; left(text(Start_Date__c + 74), 7)) &amp; 

if (Case_Record__r.Inactive_Date__c &lt;Start_Date__c + 104, NULL, &quot; | &quot; &amp; left(text(Start_Date__c + 104), 7)) &amp; 

if (Case_Record__r.Inactive_Date__c &lt;Start_Date__c + 134, NULL, &quot; | &quot; &amp; left(text(Start_Date__c + 134), 7)) &amp; 

if (Case_Record__r.Inactive_Date__c &lt;Start_Date__c + 164, NULL, &quot; | &quot; &amp; left(text(Start_Date__c + 164), 7)) &amp; 

if (Case_Record__r.Inactive_Date__c &lt;Start_Date__c + 194, NULL, &quot; | &quot; &amp; left(text(Start_Date__c + 194), 7)) &amp; 

if (Case_Record__r.Inactive_Date__c &lt;Start_Date__c + 224, NULL, &quot; | &quot; &amp; left(text(Start_Date__c + 224), 7)) &amp; 

if (Case_Record__r.Inactive_Date__c &lt;Start_Date__c + 254, NULL, &quot; | &quot; &amp; left(text(Start_Date__c + 254), 7)) &amp; 

if (Case_Record__r.Inactive_Date__c &lt;Start_Date__c + 284, NULL, &quot; | &quot; &amp; left(text(Start_Date__c + 284), 7)) &amp; 

if (Case_Record__r.Inactive_Date__c &lt;Start_Date__c + 314, NULL, &quot; | &quot; &amp; left(text(Start_Date__c + 314), 7)) &amp; 

if (Case_Record__r.Inactive_Date__c &lt;Start_Date__c + 344, NULL, &quot; | &quot; &amp; left(text(Start_Date__c + 344), 7)),

NULL))))</formula>
    <label>IDS Visit Dates</label>
    <type>Text</type>
</CustomField>