force-app/main/default/objects/Placement__c/fields/Inactive_Date_from_Case_Record__c.field-meta.xml
<CustomField>
    <fullName>Inactive_Date_from_Case_Record__c</fullName>
    <formula>Case_Record__r.Inactive_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inactive Date from Case Record</label>
    <type>Date</type>
</CustomField>