force-app/main/default/objects/Placement__c/fields/Include_in_LT_Calculations__c.field-meta.xml
<CustomField>
    <fullName>Include_in_LT_Calculations__c</fullName>
    <formula>IF(
AND(
     Text(Job_Type__c) != &quot;Short-Term&quot;,
     ISBLANK(Placement_Number__c) = false,
     Text(Job_Type__c) != &quot;Permanent-Advancement&quot;,
     ISBLANK(Text(Retention_Exception__c)) ),
TRUE,FALSE)</formula>
    <label>Include in LT Calculations</label>
    <type>Checkbox</type>
</CustomField>