force-app/main/default/objects/Placement__c/fields/Include_in_ST_Calculations__c.field-meta.xml
<CustomField>
    <fullName>Include_in_ST_Calculations__c</fullName>
    <formula>IF(
Text(Job_Type__c) = &quot;Short-Term&quot;,
TRUE,
FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Include in ST Calculations</label>
    <type>Checkbox</type>
</CustomField>