force-app/main/default/objects/Placement__c/fields/Institution__c.field-meta.xml
<CustomField>
    <fullName>Institution__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Institution (NOT USED BY TCP)</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Placements1</relationshipName>
    <type>Lookup</type>
</CustomField>