force-app/main/default/objects/Placement__c/fields/Interview_Preparation_2__c.field-meta.xml
<CustomField>
    <fullName>Interview_Preparation_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interview Preparation 2</label>
    <type>Checkbox</type>
</CustomField>