force-app/main/default/objects/Placement__c/fields/Interview_Preparation__c.field-meta.xml
<CustomField>
    <fullName>Interview_Preparation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Did the Employment Specialist help with Interview Preparation</inlineHelpText>
    <label>Interview Preparation</label>
    <type>Checkbox</type>
</CustomField>